kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo-spx-gc
spec:
  type: NodePort
  ports:
  - port: 5656
    name: demo-app-port
  selector:
    app: demo-spx-gc
