kubernetes/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: demo-spx-gc-public-ip
    networking.gke.io/managed-certificates: demo-spx-gc-certificate
    networking.gke.io/v1beta1.FrontendConfig: ingress-security-config
spec:
  rules:
  - host: demo.spx.graphics
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 5656
