kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spx-gc-demo-ingress
  annotations:
    ingressClassName: "gce"
    kubernetes.io/ingress.global-static-ip-name: demo-spx-gc-public-ip
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: spx-gc-demo-service
            port:
              number: 80
